@@ -21,7 +21,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -29,8 +28,7 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+
 import org.apache.commons.csv.CSVParser;
 import org.apache.commons.csv.CSVRecord;
 import org.apache.commons.lang3.StringUtils;
@@ -67,7 +65,7 @@ import org.apache.nifi.serialization.record.RecordSchema;
 )
 public class CSVRecordLookupService extends AbstractCSVLookupService implements RecordLookupService {
 
-    private static final Set<String> REQUIRED_KEYS = Collections.unmodifiableSet(Stream.of(KEY).collect(Collectors.toSet()));
+    private static final Set<String> REQUIRED_KEYS = Set.of(KEY);
 
     static final PropertyDescriptor CSV_FORMAT = new PropertyDescriptor.Builder()
             .fromPropertyDescriptor(AbstractCSVLookupService.CSV_FORMAT)
@@ -88,7 +86,7 @@ public class CSVRecordLookupService extends AbstractCSVLookupService implements 
                 ConcurrentHashMap<String, Record> cache = new ConcurrentHashMap<>();
                 try (final InputStream is = new FileInputStream(csvFile)) {
                     try (final InputStreamReader reader = new InputStreamReader(is, charset)) {
-                        final CSVParser records = csvFormat.builder().setHeader().setSkipHeaderRecord(true).build().parse(reader);
+                        final CSVParser records = csvFormat.builder().setHeader().setSkipHeaderRecord(true).get().parse(reader);
                         RecordSchema lookupRecordSchema = null;
                         for (final CSVRecord record : records) {
                             final String key = record.get(lookupKeyColumn);
